--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build && cd client && npm install && npm run build",
-  "lint": "eslint .",
-  "preview": "vite preview",
-  "start": "node index.js"
-},
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build && cd client && npm install && npm run build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "node index.js"
+  },
   "dependencies": {
     "@libsql/client": "^0.15.15",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "nanoid": "^5.1.6",
